@@ -1,3 +1,7 @@
+log_filter 7.x-1.x, 2013-05-12
+------------------------------
+* Implemented log deletion.
+
 log_filter 7.x-1.x, 2013-05-01
 ------------------------------
 * Get log list.
